<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ColorHex</string>
    <string name="clipboard">Copied to clipboard.</string>
    <string name="saved_to_favorite">Added to favorites.</string>
    <string name="error_on_favorite">Color couldn\'t be saved.</string>
    <string name="error_no_color">Selection is no color.</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_select_all">Select all</string>
    <string name="action_edit">Edit</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_favorite_1">Favorite</string>
    <string name="action_settings">Settings</string>
    <string name="action_license">License</string>
    <string name="license">\u0020\u0020In this App are contents used, which are running under the
        Apache License:\n\n\u0020\u0020Copyright 2012 Lars Werkman\nLicensed under the Apache
        License, Version
        2.0 (the "License"); you may not use this file except in compliance with the License. You
        may obtain a copy of the License at
        \n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\n
        Unless required by applicable law or agreed to in writing, software distributed under the
        License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
        either express or implied. See the License for the specific language governing permissions
        and limitations under the License.
    </string>
    <string name="list_header_favorite">@string/action_favorite</string>
    <string name="list_header_recent">Recent used</string>
    <string name="pref_cat_main">Main</string>
    <string name="pref_cat_support">Support</string>
    <string name="pref_title_alpha">Show alpha channel</string>
    <string name="pref_title_clipboard">Clipboard</string>
    <string name="pref_title_delete_db_fav">Delete all favorites</string>
    <string name="pref_title_delete_db_rec">Delete all recent used</string>
    <string name="contextual_menu">\u0020selected</string>
    <string name="btn_filter_color">Sort by color</string>
    <string name="btn_filter_date">Sort by date</string>
    <string name="no_entries">No entries</string>
    <string name="dialog_action_delete">Delete</string>
    <string name="dialog_delete_fav">Delete all favorites?</string>
    <string name="dialog_delete_rec">Delete all recent used?</string>
    <string name="share_with">Share with</string>
    <plurals name="share_colorcode">
        <item quantity="one">My colorcode:\u0020</item>
        <item quantity="other">My colorcodes:\u0020</item>
    </plurals>

</resources>
